# DemoForge

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
demoforge/: __init__.py  __main__.py  cli.py
demoforge/core/: __init__.py  executor.py  pipeline.py  planner.py
docker/: Dockerfile  Dockerfile.allinone  Dockerfile.api  entrypoint.sh  nginx.conf  supervisord.conf
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Hero.tsx  Progress.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/lib/: api.ts
scripts/: docker-publish.sh
tests/: requirements.txt  test_api.py  test_browser.py  test_discovery.py  test_executor.py  test_integration.py  test_planner.py  test_recorder.py  test_worker.py
worker/: browser.py  discovery.py  executor.py  planner.py  recorder.py  requirements.txt  runner.py
