[project]
name = "demoforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.4",
    "google-genai>=1.62.0",
    "google-generativeai>=0.3.2",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.1",
    "pytest-cov>=4.1.0",
    "redis>=7.1.0",
    "ruff>=0.15.0",
    "uvicorn>=0.40.0",
]
