[project]
name = "demoforge"
version = "0.1.0"
description = "Generate automated demo videos of websites"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "granth"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.41.0",
    "pydantic>=2.5.3",
    "google-generativeai>=0.3.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.1",
]
worker = [
    "redis>=5.0.1",
    "google-generativeai>=0.3.2",
]
all = [
    "demoforge[api,worker]",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.1",
    "ruff>=0.15.0",
]

[project.scripts]
demoforge = "demoforge.cli:main"

[project.urls]
Homepage = "https://github.com/heygranth/demoforge"
Repository = "https://github.com/heygranth/demoforge"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["demoforge", "demoforge.*", "api", "worker"]
